use processbuilder for ripme update on windows, exec is deprecated.